# minimal-broken-vertex

./: .gitignore  README.md  minimal_vertex_sp_credentials.json  pyproject.toml  root.json  root_pipeline_1.py  script_to_go_through.md  step_1.py  step_2.py  vertex_debugger.py
